--- a/src/Sample.Common/Sample.Common.csproj
+++ b/src/Sample.Common/Sample.Common.csproj
@@ -18,14 +18,14 @@
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.0" />    
     <PackageReference Include="System.Text.Json" Version="4.7.0" />
 
-    <PackageReference Include="OpenTelemetry" Version="0.2.0-alpha.151" />
-    <PackageReference Include="OpenTelemetry.Exporter.Prometheus" Version="0.2.0-alpha.151" />
+    <PackageReference Include="OpenTelemetry" Version="1.0.0-rc1.24" />
+    <PackageReference Include="OpenTelemetry.Exporter.Prometheus" Version="1.0.0-rc1.24" />
     <PackageReference Include="OpenTelemetry.Collector.Dependencies" Version="0.2.0-alpha.151" />
-    <PackageReference Include="OpenTelemetry.Exporter.ApplicationInsights" Version="0.2.0-alpha.151" />
-    <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="0.2.0-alpha.151" />
-    <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="0.2.0-alpha.151" />
+    <PackageReference Include="OpenTelemetry.Exporter.ApplicationInsights" Version="0.2.0-alpha.275" />
+    <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="1.0.0-rc1.24" />
+    <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="1.0.0-rc1.24" />
     <PackageReference Include="OpenTelemetry.Collector.AspNetCore" Version="0.2.0-alpha.151" />
-    <PackageReference Include="OpenTelemetry.Hosting" Version="0.2.0-alpha.151" />
+    <PackageReference Include="OpenTelemetry.Hosting" Version="0.2.0-alpha.258" />
   </ItemGroup>
 
 
