--- a/src/Sample.RabbitMQCollector/Sample.RabbitMQCollector.csproj
+++ b/src/Sample.RabbitMQCollector/Sample.RabbitMQCollector.csproj
@@ -7,9 +7,9 @@
 
   <ItemGroup>
     <PackageReference Include="RabbitMQ.Client" Version="5.1.2" />
-    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="4.7.0" />
+	<PackageReference Include="System.Diagnostics.DiagnosticSource" Version="5.0.0" />
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.12.0" />
-    <PackageReference Include="OpenTelemetry" Version="0.2.0-alpha.151" />
+	<PackageReference Include="OpenTelemetry" Version="1.0.0-rc1.24" />
   </ItemGroup>
   
 </Project>
